Fixed text overflow in ideapanel accordion details

--- a/src/components/ideapanelaccordion/IdeaPanelAccordion.module.scss
+++ b/src/components/ideapanelaccordion/IdeaPanelAccordion.module.scss
@@ -116,6 +116,8 @@
         color: var(--text-color);
         box-shadow: inset 0px 3px 6px #00000029;
 
+        overflow-wrap: break-word;
+
         .ideaDetails {
             margin-bottom: 0.875rem;
         }
